--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -39,4 +39,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         with:
           body: 'automated release at commit ${{ github.sha }}'
-          files: 'build/dist/*.jar'
+          files: 'build/libs/*.jar'
